# mona

./: pyproject.toml
ramram/: manage.py
ramram/home/: models.py  urls.py  views.py
ramram/home/templates/home/: index.html
ramram/ramram/: asgi.py  settings.py  urls.py  wsgi.py
